--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <div>
         <h1 style="font-family: Pirata One; text-align: center;">Aqui está o one piece</h1>    
     </div>
+    <div style="text-align: center;">
+        <img src="imagem/one-piece.jpg" alt="Finalmente o One Piece">
+    </div>
 </body>
 </html>
